--- a/favorites/software/code.html
+++ b/favorites/software/code.html
@@ -18,28 +18,44 @@
             </div>
             <div class="flex_row_wrap">
                 <div class="list">
-                <h3>语言</h3>
+                <h3>语言 / 框架</h3>
                 <ul>
                     <li><a href="https://www.python.org/" target="_blank" rel="noopener noreferrer"><b>Python3</b></a></li>
+                    <ul>
+                        <li><a href="https://www.djangoproject.com/" target="_blank" rel="noopener noreferrer">Django</a></li>
+                        <li><a href="https://uwsgi-docs.readthedocs.io/en/latest/WSGIquickstart.html" target="_blank" rel="noopener noreferrer">uWSGI</a></li>
+                        <li><a href="https://www.psycopg.org/" target="_blank" rel="noopener noreferrer">Psycopg</a></li>
+                        <li><a href="https://pypi.org/project/requests/" target="_blank" rel="noopener noreferrer">Requests</a></li>
+                        <li><a href="https://www.selenium.dev/zh-cn/documentation/webdriver/getting_started/" target="_blank" rel="noopener noreferrer">Selenium</a></li>
+                        <li><a href="https://doc.qt.io/qtforpython-6/" target="_blank" rel="noopener noreferrer">PySide / PyQt</a></li>
+                        <li><a href="https://github.com/nemo2011/bilibili-api" target="_blank" rel="noopener noreferrer">Bilibili Api</a></li>
+                    </ul>
                     <li>C / C++</li>
                     <ul>
+                        <li><a href="https://gcc.gnu.org/" target="_blank" rel="noopener noreferrer">GCC</a></li>
                         <li><a href="http://cygwin.com/install.html" target="_blank" rel="noopener noreferrer">Cygwin</a></li>
                         <li><a href="https://mingw-w64.org/" target="_blank" rel="noopener noreferrer">Mingw-w64</a></li>
                     </ul>
                     <li><a href="https://www.java.com/zh-CN/" target="_blank" rel="noopener noreferrer">Java</a></li>
-                    <li><a href="https://openjdk.org/" target="_blank" rel="noopener noreferrer">OpenJDK</a></li>
-                    <li>JavaScript</li>
                     <ul>
-                        <li><a href="https://cn.vuejs.org/" target="_blank" rel="noopener noreferrer">Vue.Js <span class="name">渐进式 JavaScript 框架</span></a></li>
+                        <li><a href="https://openjdk.org/" target="_blank" rel="noopener noreferrer">OpenJDK</a></li>
+                    </ul>
+                    <li><b>JavaScript</b></li>
+                    <ul>
+                        <li><a href="https://nodejs.org/zh-cn" target="_blank" rel="noopener noreferrer">Node.js <span class="name">跨平台的 JavaScript 运行时环境</span></a></li>
+                        <li><a href="https://cn.vuejs.org/" target="_blank" rel="noopener noreferrer"><b>Vue.js</b> <span class="name">渐进式 JavaScript 框架</span></a></li>
                         <ul>
                             <li><a href="https://element-plus.gitee.io/zh-CN/" target="_blank" rel="noopener noreferrer">Element Plus <span class="name">Vue 3 UI 框架</span></a></li>
                         </ul>
+                        <li><a href="https://www.electronjs.org/zh/" target="_blank" rel="noopener noreferrer">Electron <span class="name">桌面应用程序的框架</span></a></li>
                         <li><a href="https://nextjs.org/" target="_blank" rel="noopener noreferrer">Next.js <span class="name">React Web 框架</span></a></li>
                         <li><a href="https://www.chartjs.org/docs/latest/" target="_blank" rel="noopener noreferrer">Chart.js <span class="name">图表工具</span></a></li>
                         <li><a href="https://threejs.org/" target="_blank" rel="noopener noreferrer">Three.js <span class="name">3D WebGL库</span></a></li>
                     </ul>
                     <li><a href="https://www.php.net/" target="_blank" rel="noopener noreferrer">PHP</a></li>
-                    <li><a href="https://go.dev/" target="_blank" rel="noopener noreferrer">Go</a></li>
+                    <li><a href="https://golang.google.cn"  target="_blank" rel="noopener noreferrer">Go</a></li><!-- https://go.dev/ -->
+                    <li><a href="https://developer.android.google.cn/" target="_blank" rel="noopener noreferrer">Android</a></li><!-- https://developer.android.com/ -->
+                    <li><a href="https://flutter.dev/" target="_blank" rel="noopener noreferrer">Flutter <span class="name">跨平台应用开发框架</span></a></li>
                     <li>SQL</li>
                 </ul>
                 </div>
@@ -48,37 +64,112 @@
                     <ul>
                         <li><a href="https://www.vim.org/" target="_blank" rel="noopener noreferrer">Vim</a></li>
                         <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer">Visual Studio Code</a></li>
-                        <li><a href="https://www.jetbrains.com/pycharm/" target="_blank" rel="noopener noreferrer">PyCharm</a></li>
+                        <ul>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=vscode-icons-team.vscode-icons" target="_blank" rel="noopener noreferrer">vscode-icons <span class="name">图标</span></a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=zhuangtongfa.Material-theme" target="_blank" rel="noopener noreferrer">One Dark Pro <span class="name">黑暗主题</span></a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=shd101wyy.markdown-preview-enhanced" target="_blank" rel="noopener noreferrer">Markdown Preview Enhanced <span class="name">Markdown</span></a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight" target="_blank" rel="noopener noreferrer">Color Highlight <span class="name">颜色高亮</span></a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=anseki.vscode-color" target="_blank" rel="noopener noreferrer">Color Picker <span class="name">颜色选取</span></a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode" target="_blank" rel="noopener noreferrer">Prettier <span class="name">代码格式化</span></a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=shardulm94.trailing-spaces" target="_blank" rel="noopener noreferrer">Trailing Spaces <span class="name">突出显示行尾空格</span></a></li>
+                        </ul>
+                        <li><a href="https://www.jetbrains.com/pycharm/" target="_blank" rel="noopener noreferrer"><del>PyCharm</del></a></li>
                     </ul>
                     <h3>数据库</h3>
                     <ul>
                         <li><a href="https://www.postgresql.org/" target="_blank" rel="noopener noreferrer">PostgreSQL</a></li>
                         <li><a href="https://mariadb.org/zh/" target="_blank" rel="noopener noreferrer">MariaDB</a></li>
                         <li><a href="https://www.sqlite.org/index.html" target="_blank" rel="noopener noreferrer">SQLite</a></li>
+                        <li><a href="https://www.microsoft.com/zh-cn/sql-server/sql-server-downloads" target="_blank" rel="noopener noreferrer">SQL Server</a></li>
+                        <li><a href="https://redis.io/" target="_blank" rel="noopener noreferrer">Redis</a></li>
                     </ul>
                     <h3>版本控制</h3>
                     <ul>
                         <li><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer">Git</a></li>
                         <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                        <li><a href="https://about.gitlab.com/install/" target="_blank" rel="noopener noreferrer">GitLab</a></li>
                     </ul>
                 </div>
                 <div class="list">
                     <h3><a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer">Docker</a></h3>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="https://hub.docker.com/r/p3terx/aria2-pro" target="_blank" rel="noopener noreferrer">aria2-pro <span class="name">下载工具</span></a></li>
+                        <li><a href="https://github.com/linuxserver/docker-qbittorrent" target="_blank" rel="noopener noreferrer">qbittorrent <span class="name">BT下载</span></a></li>
+                        <li><a href="https://usememos.com/" target="_blank" rel="noopener noreferrer">memos <span class="name">轻量级笔记服务</span></a></li>
+                        <li><a href="https://rec.danmuji.org/user/install/docker/" target="_blank" rel="noopener noreferrer">BililiveRecorder <span class="name">录播姬</span></a></li>
+                        <li><a href="https://github.com/hectorqin/reader" target="_blank" rel="noopener noreferrer">Reader <span class="name">阅读3服务器版</span></a></li>
+                        <li><a href="https://hub.docker.com/r/wekanteam/wekan" target="_blank" rel="noopener noreferrer">WeKan <span class="name">开源看板</span></a></li>
                     </ul>
                     <h3>SSH / SFTP</h3>
                     <ul>
-                        <li><a href="https://www.putty.org/" target="_blank" rel="noopener noreferrer">PuTTY</li>
-                        <li><a href="https://filezilla-project.org/" target="_blank" rel="noopener noreferrer">FileZilla</li>
+                        <li><a href="https://www.putty.org/" target="_blank" rel="noopener noreferrer">PuTTY</a></li>
+                        <li><a href="https://filezilla-project.org/" target="_blank" rel="noopener noreferrer">FileZilla</a></li>
+                    </ul>
+                    <h3>SSL</h3>
+                    <ul>
+                        <li><a href="https://letsencrypt.org/zh-cn/" target="_blank" rel="noopener noreferrer">Let’s Encrypt</a></li>
+                        <li><a href="https://certbot.eff.org/" target="_blank" rel="noopener noreferrer">Certbot</a></li>
                     </ul>
                     <h3>内网穿透</h3>
                     <ul>
-                        <li><a href="https://github.com/fatedier/frp" target="_blank" rel="noopener noreferrer">frp</li>
-                        <li><a href="https://github.com/inconshreveable/ngrok/tree/master" target="_blank" rel="noopener noreferrer">ngrok</li>
+                        <li><a href="https://github.com/fatedier/frp" target="_blank" rel="noopener noreferrer">frp</a></li>
+                        <li><a href="https://github.com/inconshreveable/ngrok/tree/master" target="_blank" rel="noopener noreferrer">ngrok</a></li>
+                    </ul>
+                    <h3>图标</h3>
+                    <ul>
+                        <li><a href="https://github.com/tibold/svg-explorer-extension" target="_blank" rel="noopener noreferrer">SVG Viewer Extension <span class="name">SVG预览</span></a></li>
+                        <li><a href="https://remixicon.com/" target="_blank" rel="noopener noreferrer">Remix Icon</a></li>
+                        <li><a href="https://www.iconfont.cn/" target="_blank" rel="noopener noreferrer">阿里巴巴矢量图标库</a></li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <h3>CDN</h3>
+                    <ul>
+                        <li><a href="https://www.cloudflare-cn.com/" target="_blank" rel="noopener noreferrer">Cloudflare</a></li>
+                        <li><a href="https://help.aliyun.com/zh/cdn/" target="_blank" rel="noopener noreferrer">阿里云</a></li>
+                    </ul>
+                    <h3>开源软件镜像站</h3>
+                    <ul>
+                        <li><a href="https://mirrors.tuna.tsinghua.edu.cn/" target="_blank" rel="noopener noreferrer">清华大学</a></li>
+                        <li><a href="https://mirrors.ustc.edu.cn/" target="_blank" rel="noopener noreferrer">中国科学技术大学</a></li>
+                        <li><a href="https://mirrors.sdu.edu.cn/#/home" target="_blank" rel="noopener noreferrer">山东大学</a></li>
+                        <li><a href="https://mirrors.huaweicloud.com/home" target="_blank" rel="noopener noreferrer">华为云</a></li>
+                        <li><a href="https://mirrors.cloud.tencent.com/" target="_blank" rel="noopener noreferrer">腾讯云</a></li>
+                        <li><a href="https://developer.aliyun.com/mirror/" target="_blank" rel="noopener noreferrer">阿里云</a></li>
+                        <li><a href="https://mirrors.163.com/" target="_blank" rel="noopener noreferrer">网易云</a></li>
+                    </ul>
+                    <h4>pip</h4>
+                    <ul>
+                        <li><a href="https://mirrors.tuna.tsinghua.edu.cn/help/pypi/" target="_blank" rel="noopener noreferrer">清华大学</a></li>
+                        <li><a href="https://mirrors.cloud.tencent.com/help/pypi.html" target="_blank" rel="noopener noreferrer">腾讯云</a></li>
+                    </ul>
+                    <h4>npm</h4>
+                    <ul>
+                        <li><a href="https://npmmirror.com/" target="_blank" rel="noopener noreferrer">npmmirror</a></li>
+                    </ul>
+                    <h4>DockerHub 镜像加速器</h4>
+                    <ul>
+                        <li><a href="https://hub-mirror.c.163.com" target="_blank" rel="noopener noreferrer">网易</a></li>
+                        <li><a href="https://mirror.baidubce.com" target="_blank" rel="noopener noreferrer">百度</a></li>
+                        <li><a href="https://ccr.ccs.tencentyun.com" target="_blank" rel="noopener noreferrer">腾讯</a></li>
+                        <li><a href="https://www.aliyun.com/product/acr" target="_blank" rel="noopener noreferrer">阿里</a></li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <h3>服务</h3>
+                    <ul>
+                        <li><a href="https://httpd.apache.org/" target="_blank" rel="noopener noreferrer">Apache httpd <span class="name">开源HTTP服务器</span></a></li>
+                        <li><a href="https://nginx.org/en/" target="_blank" rel="noopener noreferrer">Nginx <span class="name">高性能的HTTP和反向代理web服务器</span></a></li>
+                        <li><a href="https://www.zabbix.com/cn" target="_blank" rel="noopener noreferrer">Zabbix <span class="name">企业级开源监控解决方案</span></a></li>
+                        <li><a href="https://larsjung.de/h5ai/" target="_blank" rel="noopener noreferrer">h5ai <span class="name">HTTP Web 文件服务器</span></a></li>
+                        <li><a href="https://nextcloud.com/" target="_blank" rel="noopener noreferrer">Nextcloud <span class="name">私有云盘</span></a></li>
+                        <li><a href="https://about.gitlab.com/install/" target="_blank" rel="noopener noreferrer">GitLab <span class="name">基于Git的开源代码管理平台</span></a></li>
+                        <li><a href="https://docs.gitea.com/zh-cn/" target="_blank" rel="noopener noreferrer">Gitea <span class="name">自己托管的Git服务</span></a></li>
+                        <li><a href="https://www.minecraft.net/en-us/download/server" target="_blank" rel="noopener noreferrer">Minecraft <span class="name">我的世界</span></a></li>
+                    </ul>
+                    <h3>其他</h3>
+                    <ul>
+                        <li><a href="https://www.gitbook.com/" target="_blank" rel="noopener noreferrer">Gitbook <span class="name">共享知识</span></a></li>
+                        <li><a href="https://vercel.com/home" target="_blank" rel="noopener noreferrer">Vercel <span class="name">静态网站托管</span></a></li>
                     </ul>
                 </div>
             </div>
