--- a/favorites/software/code.html
+++ b/favorites/software/code.html
@@ -88,6 +88,11 @@
                         <li><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer">Git</a></li>
                         <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                     </ul>
+                    <h3>其他</h3>
+                    <ul>
+                        <li><a href="https://www.gitbook.com/" target="_blank" rel="noopener noreferrer">Gitbook <span class="name">共享知识</span></a></li>
+                        <li><a href="https://vercel.com/home" target="_blank" rel="noopener noreferrer">Vercel <span class="name">静态网站托管</span></a></li>
+                    </ul>
                 </div>
                 <div class="list">
                     <h3><a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer">Docker</a></h3>
@@ -99,6 +104,13 @@
                         <li><a href="https://github.com/hectorqin/reader" target="_blank" rel="noopener noreferrer">Reader <span class="name">阅读3服务器版</span></a></li>
                         <li><a href="https://hub.docker.com/r/wekanteam/wekan" target="_blank" rel="noopener noreferrer">WeKan <span class="name">开源看板</span></a></li>
                     </ul>
+                    <h4>DockerHub 镜像加速器</h4>
+                    <ul>
+                        <li><a href="https://hub-mirror.c.163.com" target="_blank" rel="noopener noreferrer">网易</a></li>
+                        <li><a href="https://mirror.baidubce.com" target="_blank" rel="noopener noreferrer">百度</a></li>
+                        <li><a href="https://ccr.ccs.tencentyun.com" target="_blank" rel="noopener noreferrer">腾讯</a></li>
+                        <li><a href="https://www.aliyun.com/product/acr" target="_blank" rel="noopener noreferrer">阿里</a></li>
+                    </ul>
                     <h3>SSH / SFTP</h3>
                     <ul>
                         <li><a href="https://www.putty.org/" target="_blank" rel="noopener noreferrer">PuTTY</a></li>
@@ -106,7 +118,7 @@
                     </ul>
                     <h3>SSL</h3>
                     <ul>
-                        <li><a href="https://letsencrypt.org/zh-cn/" target="_blank" rel="noopener noreferrer">Let’s Encrypt</a></li>
+                        <li><a href="https://letsencrypt.org/zh-cn/" target="_blank" rel="noopener noreferrer">Let's Encrypt</a></li>
                         <li><a href="https://certbot.eff.org/" target="_blank" rel="noopener noreferrer">Certbot</a></li>
                     </ul>
                     <h3>内网穿透</h3>
@@ -146,15 +158,6 @@
                     <ul>
                         <li><a href="https://npmmirror.com/" target="_blank" rel="noopener noreferrer">npmmirror</a></li>
                     </ul>
-                    <h4>DockerHub 镜像加速器</h4>
-                    <ul>
-                        <li><a href="https://hub-mirror.c.163.com" target="_blank" rel="noopener noreferrer">网易</a></li>
-                        <li><a href="https://mirror.baidubce.com" target="_blank" rel="noopener noreferrer">百度</a></li>
-                        <li><a href="https://ccr.ccs.tencentyun.com" target="_blank" rel="noopener noreferrer">腾讯</a></li>
-                        <li><a href="https://www.aliyun.com/product/acr" target="_blank" rel="noopener noreferrer">阿里</a></li>
-                    </ul>
-                </div>
-                <div class="list">
                     <h3>服务</h3>
                     <ul>
                         <li><a href="https://httpd.apache.org/" target="_blank" rel="noopener noreferrer">Apache httpd <span class="name">开源HTTP服务器</span></a></li>
@@ -166,11 +169,15 @@
                         <li><a href="https://docs.gitea.com/zh-cn/" target="_blank" rel="noopener noreferrer">Gitea <span class="name">自己托管的Git服务</span></a></li>
                         <li><a href="https://www.minecraft.net/en-us/download/server" target="_blank" rel="noopener noreferrer">Minecraft <span class="name">我的世界</span></a></li>
                     </ul>
-                    <h3>其他</h3>
-                    <ul>
-                        <li><a href="https://www.gitbook.com/" target="_blank" rel="noopener noreferrer">Gitbook <span class="name">共享知识</span></a></li>
-                        <li><a href="https://vercel.com/home" target="_blank" rel="noopener noreferrer">Vercel <span class="name">静态网站托管</span></a></li>
-                    </ul>
+                </div>
+                <div class="list">
+                    <h3>字体</h3>
+                    <a href="https://github.com/be5invis/Sarasa-Gothic" target="_blank" rel="noopener noreferrer"><img src="../fonts/1x/Sarasa Mono SC.png"></a>
+                    <a href="https://github.com/adobe-fonts/source-code-pro" target="_blank" rel="noopener noreferrer"><img src="../fonts/1x/Source Code Pro.png"></a>
+                    <a href="https://github.com/microsoft/cascadia-code" target="_blank" rel="noopener noreferrer"><img src="../fonts/1x/Cascadia Code.png"></a>
+                    <a href="https://github.com/googlefonts/Inconsolata" target="_blank" rel="noopener noreferrer"><img src="../fonts/1x/Inconsolata.png"></a>
+                    <a href="https://github.com/belluzj/fantasque-sans" target="_blank" rel="noopener noreferrer"><img src="../fonts/1x/Fantasque Sans Mono.png"></a>
+                    <a href="https://github.com/intel/intel-one-mono" target="_blank" rel="noopener noreferrer"><img src="../fonts/1x/Intel One Mono.png"></a>
                 </div>
             </div>
         </div>
