--- a/favorites/software/web.html
+++ b/favorites/software/web.html
@@ -88,6 +88,7 @@
                         <li><a href="https://www.mediawiki.org/wiki/MediaWiki" target="_blank" rel="noopener noreferrer">MediaWiki <span class="name">开源百科系统</span></a></li>
                         <li><a href="https://github.com/alvis-u/uexam" target="_blank" rel="noopener noreferrer">学之思 <span class="name">开源在线考试系统</span></a></li>
                         <li><a href="https://open.gridea.dev/" target="_blank" rel="noopener noreferrer">Gridea <span class="name">静态博客写作客户端</span></a></li>
+                        <li><a href="https://nexusphp.org/" target="_blank" rel="noopener noreferrer">Nexus PHP <span class="name">完整的PT建站解决方案</span></a></li>
                     </ul>
                 </div>
             </div>
