--- a/favorites/fonts/fonts.html
+++ b/favorites/fonts/fonts.html
@@ -4,23 +4,142 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
-        <script src="js/vue.global.prod.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <title></title>
+        <script src="../../js/vue.global.prod.js"></script>
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>Fonts | 阿源的收藏夹</title>
     </head>
 
     <body>
         <div id="app">
+            <div class="head">
+                <div class="head_title">
+                    <h1>Fonts</h1>
+                </div>
+            </div>
+            <div class="flex_row_wrap">
+                <div class="list" style="max-width: 800px;">
+                    <h2 style="text-align: center;">免费可商用字体</h2>
+                    <a href="https://github.com/adobe-fonts/source-han-sans" target="_blank" rel="noopener noreferrer"><img src="./1x/思源黑体.png"></a>
+                    <a href="https://github.com/adobe-fonts/source-han-serif" target="_blank" rel="noopener noreferrer"><img src="./1x/思源宋体.png"></a>
+                    <a href="https://github.com/lxgw/975maru" target="_blank" rel="noopener noreferrer"><img src="./1x/975 圆体.png"></a>
+                    <a href="https://www.fonts.net.cn/font-31593102437.html" target="_blank" rel="noopener noreferrer"><img src="./1x/方正黑体简体.png"></a>
+                    <a href="https://www.fonts.net.cn/font-31538305958.html" target="_blank" rel="noopener noreferrer"><img src="./1x/方正仿宋简体.png"></a>
+                    <a href="https://www.fonts.net.cn/font-31561199974.html" target="_blank" rel="noopener noreferrer"><img src="./1x/方正楷体简体.png"></a>
+                    <a href="https://www.fonts.net.cn/font-31537398849.html" target="_blank" rel="noopener noreferrer"><img src="./1x/方正书宋简体.png"></a>
+                    <a href="https://mp.weixin.qq.com/s/7kv3i_YEs7x9_9IrCDYvBA" target="_blank" rel="noopener noreferrer"><img src="./1x/杨任东竹石体.png"></a>
+                    <a href="https://www.fonts.net.cn/font-37007105996.html" target="_blank" rel="noopener noreferrer"><img src="./1x/庞门正道粗书体.png"></a>
+                    <a href="https://mp.weixin.qq.com/s/Q1lAIre4yJ-Zlf2CD82EPA" target="_blank" rel="noopener noreferrer"><img src="./1x/演示悠然小楷.png"></a>
+                    <a href="https://www.wencang.com/font.jsp" target="_blank" rel="noopener noreferrer"><img src="./1x/问藏书房.png"></a>
+                    <a href="https://www.uisdc.com/uisdc-first-free-font" target="_blank" rel="noopener noreferrer"><img src="./1x/优设标题黑.png"></a>
+                    <a href="https://www.uisdc.com/uisdc-second-free-font" target="_blank" rel="noopener noreferrer"><img src="./1x/优设好身体.png"></a>
+                    <a href="https://github.com/atelier-anchor/smiley-sans" target="_blank" rel="noopener noreferrer"><img src="./1x/得意黑.png"></a>
+                    <a href="https://github.com/lxgw/LxgwWenKai" target="_blank" rel="noopener noreferrer"><img src="./1x/霞鹜文楷.png"></a>
+                    <a href="https://github.com/lxgw/kose-font" target="_blank" rel="noopener noreferrer"><img src="./1x/小赖字体.png"></a>
+                    <a href="https://mp.weixin.qq.com/s/LRKYtTIghVSNX2pY4w-mZA" target="_blank" rel="noopener noreferrer"><img src="./1x/鸿雷板书简体.png"></a>
+                    <a href="https://github.com/max32002/masafont" target="_blank" rel="noopener noreferrer"><img src="./1x/正風毛筆.png"></a>
+                    <a href="https://www.zcool.com.cn/special/zcoolfonts/" target="_blank" rel="noopener noreferrer"><img src="./1x/站酷高端黑.png"></a>
+                    <a href="https://www.zcool.com.cn/special/zcoolfonts/" target="_blank" rel="noopener noreferrer"><img src="./1x/站酷快乐体.png"></a>
+                    <a href="https://www.zcool.com.cn/special/zcoolfonts/" target="_blank" rel="noopener noreferrer"><img src="./1x/站酷庆科黄油体.png"></a>
+                    <a href="https://www.zcool.com.cn/special/zcoolfonts/" target="_blank" rel="noopener noreferrer"><img src="./1x/站酷小薇LOGO体.png"></a>
+                    <a href="https://github.com/LingDong-/qiji-font" target="_blank" rel="noopener noreferrer"><img src="./1x/令东齐伋体.png"></a>
+                </div>
+                <div class="list">
+                    <h3>免费可商用字体</h3>
+                    <ul>
+                        <li><a href="https://www.google.com/get/noto/" target="_blank" rel="noopener noreferrer">Noto Sans <span class="name">Google</span></a></li>
+                        <li><a href="https://mirrors.tuna.tsinghua.edu.cn/adobe-fonts/" target="_blank" rel="noopener noreferrer">思源字体 <span class="name">清华大学镜像站</span></a></li>
+                        <li><a href="http://wenq.org" target="_blank" rel="noopener noreferrer">文泉驿</a></li>
+                        <li><a href="https://alibabafont.taobao.com/" target="_blank" rel="noopener noreferrer">阿里巴巴普惠体</a></li>
+                        <li><a href="https://open.oppomobile.com/bbs/forum.php?mod=viewthread&tid=2274" target="_blank" rel="noopener noreferrer">OPPO Sans</a></li>
+                        <li><a href="https://web.vip.miui.com/page/info/mio/mio/detail?postId=33935854" target="_blank" rel="noopener noreferrer">MiSans</a></li>
+                        <li><a href="https://page.dingtalk.com/wow/dingtalk/default/dingtalk/y-W5aF3_ZJwzulU0nceIl" target="_blank" rel="noopener noreferrer">钉钉进步体</a></li>
+                        <li><a href="https://timothyqiu.itch.io/vonwaon-bitmap" target="_blank" rel="noopener noreferrer">凤凰点阵体</a></li>
+                        <li><a href="https://justfont.com/huninn/" target="_blank" rel="noopener noreferrer">jf open 粉圓字型</a></li>
+                        <li><a href="https://www.fonts.net.cn/font-40442287275.html" target="_blank" rel="noopener noreferrer">Aa剑豪体</a></li>
+                        <li><a href="https://www.fonts.net.cn/font-31842206039.html" target="_blank" rel="noopener noreferrer">和田研字体 细</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/iWn8SWH5ymBKmsGiHe8Yfw" target="_blank" rel="noopener noreferrer">演示佛系体</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/CRnRsYu8ymlG9_oK6wmBag" target="_blank" rel="noopener noreferrer">演示春风楷</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/CRnRsYu8ymlG9_oK6wmBag" target="_blank" rel="noopener noreferrer">演示秋鸿楷</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/CRnRsYu8ymlG9_oK6wmBag" target="_blank" rel="noopener noreferrer">演示夏行楷</a></li>
+                        <li><a href="https://www.hellofont.cn/newsdetail?id=229641" target="_blank" rel="noopener noreferrer">字由芳华体</a></li>
+                        <li><a href="https://www.hellofont.cn/newsdetail?id=229641" target="_blank" rel="noopener noreferrer">字由文艺黑</a></li>
+                        <li><a href="http://tsanger.cn/product/198" target="_blank" rel="noopener noreferrer">仓耳渔阳体</a></li>
+                        <li><a href="http://tsanger.cn/product/191" target="_blank" rel="noopener noreferrer">仓耳与墨</a></li>
+                        <li><a href="http://tsanger.cn/product/195" target="_blank" rel="noopener noreferrer">仓耳小丸子</a></li>
+                        <li><a href="http://tsanger.cn/product/194" target="_blank" rel="noopener noreferrer">仓耳周珂正大榜书</a></li>
+                        <li><a href="http://tsanger.cn/product/208" target="_blank" rel="noopener noreferrer">仓耳非白</a></li>
+                        <li><a href="http://tsanger.cn/product/203" target="_blank" rel="noopener noreferrer">仓耳舒圆体</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/SHC9CUwzxe2amgQC-96f4Q" target="_blank" rel="noopener noreferrer">庞门正道标题体</a></li>
+                        <li><a href="https://www.fonts.net.cn/font-38139326495.html" target="_blank" rel="noopener noreferrer">庞门正道轻松体</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/H_jrZJIHwNCSyUncVpyXUQ" target="_blank" rel="noopener noreferrer">黄煜臣江西拙楷</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZNDA2MzA3ODQ=.html" target="_blank" rel="noopener noreferrer">卓健橄榄简体</a></li>
+                        <li><a href="https://github.com/lxgw/yozai-font" target="_blank" rel="noopener noreferrer">悠哉字体</a></li>
+                        <li><a href="https://www.uisdc.com/uisdc-ziyou-bangbang" target="_blank" rel="noopener noreferrer">优设字由棒棒体</a></li>
+                        <li><a href="https://www.uisdc.com/uisdc-4-free-font" target="_blank" rel="noopener noreferrer">优设标题圆</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZNDE3NjcwMTY=.html" target="_blank" rel="noopener noreferrer">胡晓波真帅体</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZNDE3NjcwMTY=.html" target="_blank" rel="noopener noreferrer">胡晓波骚包体</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZNDE3NjcwMTY=.html" target="_blank" rel="noopener noreferrer">胡晓波男神体</a></li>
+                        <li><a href="https://www.fonts.net.cn/font-33849296004.html" target="_blank" rel="noopener noreferrer">全字库说文解字</a></li>
+                        <li><a href="http://www.reeji.com/font/ruizizhenyantimianfeishangyong.html" target="_blank" rel="noopener noreferrer">锐字真言体</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZMjI2MDk1MDg=.html" target="_blank" rel="noopener noreferrer">手书体</a></li>
+                        <li><a href="https://www.hanyi.com.cn/productdetail.php?id=3102" target="_blank" rel="noopener noreferrer">贤二体</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/-SOzukV7fINFW0a36zVihQ" target="_blank" rel="noopener noreferrer">字体圈欣意冠黑体</a></li>
+                        <li><a href="https://www.zcool.com.cn/special/zcoolfonts/" target="_blank" rel="noopener noreferrer">站酷酷黑体</a></li>
+                        <li><a href="https://www.zcool.com.cn/special/zcoolfonts/" target="_blank" rel="noopener noreferrer">站酷文艺体</a></li>
+                        <li><a href="http://www.sucaijishi.com/font-37-792-1.html" target="_blank" rel="noopener noreferrer">素材集市康康体</a></li>
+                        <li><a href="http://www.sucaijishi.com/font-37-866-1.html" target="_blank" rel="noopener noreferrer">素材集市康康体</a></li>
+                        <li><a href="https://github.com/welai/glow-sans" target="_blank" rel="noopener noreferrer">未来荧黑</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZMjg5MjAwMDQ=.html" target="_blank" rel="noopener noreferrer">沐瑶软笔手写体</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZMzYwMzk2MjA=.html" target="_blank" rel="noopener noreferrer">沐瑶随心手写体</a></li>
+                        <li><a href="https://github.com/max32002/JasonHandWritingFonts" target="_blank" rel="noopener noreferrer">清松手写体</a></li>
+                        <li><a href="https://mp.weixin.qq.com/s/PSmL5_9spCv1ZwntvKgmFQ" target="_blank" rel="noopener noreferrer">新叶念体</a></li>
+                        <li><a href="http://www.yegenyou.com/font-detail-55-1-.htm" target="_blank" rel="noopener noreferrer">叶根友锐劲体</a></li>
+                        <li><a href="http://www.yegenyou.com/font-detail-259-3-.htm" target="_blank" rel="noopener noreferrer">叶根友守中曲画</a></li>
+                        <li><a href="http://www.yegenyou.com/font-detail-111-3-.htm" target="_blank" rel="noopener noreferrer">叶根友微典</a></li>
+                        <li><a href="http://www.yegenyou.com/font-detail-116-3-.htm" target="_blank" rel="noopener noreferrer">叶根友微禅云</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZMzAzODE0MTI=.html" target="_blank" rel="noopener noreferrer">寒蝉手拙体</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZNDA2MzkyNTY=.html" target="_blank" rel="noopener noreferrer">阿朱泡泡</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZMjE0MjQyMDg=.html" target="_blank" rel="noopener noreferrer">品如手写体</a></li>
+                        <li><a href="https://www.zcool.com.cn/work/ZMzUxMzUzNzY=.html" target="_blank" rel="noopener noreferrer">联盟起义卢帅正锐黑体</a></li>
+                        <li><a href="https://github.com/m4rc1e/zhimangxing" target="_blank" rel="noopener noreferrer">钟齐志莽行书</a></li>
+                        <li><a href="https://www.17font.com/fontDay/OpenSource" target="_blank" rel="noopener noreferrer">字体视界法棍体</a></li>
+                        <li><a href="https://github.com/max32002/bakudaifont" target="_blank" rel="noopener noreferrer">莫大毛筆字體</a></li>
+                        <li><a href="https://www.fonts.net.cn/author-6272423173-1.html" target="_blank" rel="noopener noreferrer">台北黑体</a></li>
+                        <li><a href="https://www.17font.com/font/detail/ffa44a8a95d04b54ae36a09cf8b7f84a.html" target="_blank" rel="noopener noreferrer">楚辰体 <span class="name">个人商用免费</span></a></li>
+                        <li><a href="https://founder.acgvlyric.org/iu/doku.php/%E9%80%A0%E5%AD%97:%E9%96%8B%E6%BA%90%E5%AD%97%E5%9E%8B_i.%E6%98%8E%E9%AB%94" target="_blank" rel="noopener noreferrer">刻石录明体</a></li>
+                        <li><a href="https://founder.acgvlyric.org/iu/doku.php/%e9%80%a0%e5%ad%97:%e9%96%8b%e6%ba%90%e5%ad%97%e5%9e%8b_i.%e9%a1%8f%e9%ab%94" target="_blank" rel="noopener noreferrer">刻石录颜体</a></li>
+                        <li><a href="https://founder.acgvlyric.org/iu/doku.php/%E9%80%A0%E5%AD%97:%E9%96%8B%E6%BA%90%E5%AD%97%E5%9E%8B_i.%E9%8B%BC%E7%AD%86%E9%B6%B4%E9%AB%94" target="_blank" rel="noopener noreferrer">刻石录钢笔鹤体</a></li>
+                        <li><a href="https://act.ibaotu.com/activity/1.html" target="_blank" rel="noopener noreferrer">包图小白体</a></li>
+                        <!-- li>a:blank -->
+                    </ul>
+                    <ul>
+
+                    </ul>
+                    <h3>个人非商业授权</h3>
+                    <ul>
+                        <li><a href="http://www.makefont.com/" target="_blank" rel="noopener noreferrer">造字工房</a></li>
+                        <li><a href="http://www.sentyfont.com/" target="_blank" rel="noopener noreferrer">汉仪新蒂</a></li>
+                        <li><a href="https://github.com/SolidZORO/zpix-pixel-font" target="_blank" rel="noopener noreferrer">Zpix 最像素</a></li>
+                    </ul>
+                    <h3>商业字体 <span class="name"></span></h3>
+                    <ul>
+                        <li><a href="https://shop110631460.taobao.com/" target="_blank" rel="noopener noreferrer">喜鹊造字</a></li>
+                        <li><a href="http://www.foundertype.com/" target="_blank" rel="noopener noreferrer">方正字库</a></li>
+                        <li><a href="https://www.hanyi.com.cn/" target="_blank" rel="noopener noreferrer">汉仪字库</a></li>
+                        <li><a href="https://www.dynacw.com.cn/" target="_blank" rel="noopener noreferrer">华康字型</a></li>
+                        <li><a href="http://tsanger.cn/" target="_blank" rel="noopener noreferrer">仓耳屏显字库</a></li>
+                        <li><a href="https://3type.cn/fonts/dinkie_bitmap/index.html" target="_blank" rel="noopener noreferrer">丁卯点阵体</a></li>
+                    </ul>
+                    <h3>字体平台</h3>
+                    <ul>
+                        <li><a href="https://fonts.google.com" target="_blank" rel="noopener noreferrer">Google Fonts</a></li>
+                        <li><a href="https://www.fonts.net.cn/" target="_blank" rel="noopener noreferrer">字体天下</a></li>
+                        <li><a href="https://www.17font.com/" target="_blank" rel="noopener noreferrer">字体视界</a></li>
+                        <li><a href="https://51font.17font.com/" target="_blank" rel="noopener noreferrer">51Font <span class="name">开源免费字体发布平台</span></a></li>
+                        <li><a href="https://www.hellofont.cn/" target="_blank" rel="noopener noreferrer">字由</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
-    <script>
-        const { createApp } = Vue
-
-        createApp({
-            data() {
-                return {}
-            },
-            methods: {},
-        }).mount("#app")
-    </script>
 </html>
