--- a/index.html
+++ b/index.html
@@ -6,38 +6,77 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
         <script src="js/vue.global.prod.js"></script>
         <link rel="stylesheet" href="css/style.css" />
-        <title>阿源的主页</title>
+        <title>勤劳的牧场主 | 阿源的主页</title>
     </head>
 
     <body>
-        <div id="app" class="toolkit">
-            <div class="head">
-                <div class="head_avatar">
-                    <img src="image/13422426.png" />
+        <div id="app" style="flex-flow: row nowrap;">
+            <div class="index_l" id="cover"></div>
+            <div class="index_r" id="main">
+                <div class="navigation">
+                    <div @click="to('favorites/index.html')">收藏</div>
+                    <div @click="to('toolkit.html')">工具</div>
+                    <a href="https://live.bilibili.com/3472667" target="_blank" rel="noopener noreferrer"><div>直播间</div></a>
                 </div>
-                <div class="head_title">
-                    <h1>阿源的主页</h1>
-                    <p></p>
+                <div id="info">
+                    <div class="index_avatar"><img src="image/13422426.png"></div>
+                    <h1>勤劳的牧场主</h1>
+                    <p class="slogan">名字是「<span style="color: #198d44; font-weight: 500;">起源</span>」，也可以叫我阿源 ！</p>
                 </div>
-            </div>
-            <div class="main">
-                <img src="" style="width: 100%;">
-                <a href="favorites/index.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 2H20C20.5523 2 21 2.44772 21 3V22.2763C21 22.5525 20.7761 22.7764 20.5 22.7764C20.4298 22.7764 20.3604 22.7615 20.2963 22.7329L12 19.0313L3.70373 22.7329C3.45155 22.8455 3.15591 22.7322 3.04339 22.4801C3.01478 22.4159 3 22.3465 3 22.2763V3C3 2.44772 3.44772 2 4 2ZM19 19.9645V4H5V19.9645L12 16.8412L19 19.9645ZM12 13.5L9.06107 15.0451L9.62236 11.7725L7.24472 9.45492L10.5305 8.97746L12 6L13.4695 8.97746L16.7553 9.45492L14.3776 11.7725L14.9389 15.0451L12 13.5Z" fill="rgba(51,51,51,1)"></path></svg>
-                    &nbsp;收藏夹</a>
-                <a href="toolkit.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5.32894 3.27158C6.56203 2.8332 7.99181 3.10749 8.97878 4.09446C10.0997 5.21537 10.3014 6.90741 9.58382 8.23385L20.2925 18.9437L18.8783 20.3579L8.16933 9.64875C6.84277 10.3669 5.1502 10.1654 4.02903 9.04421C3.04178 8.05696 2.76761 6.62665 3.20652 5.39332L5.44325 7.63C6.02903 8.21578 6.97878 8.21578 7.56457 7.63C8.15035 7.04421 8.15035 6.09446 7.56457 5.50868L5.32894 3.27158ZM15.6963 5.15512L18.8783 3.38736L20.2925 4.80157L18.5247 7.98355L16.757 8.3371L14.6356 10.4584L13.2214 9.04421L15.3427 6.92289L15.6963 5.15512ZM8.97878 13.2868L10.393 14.7011L5.08969 20.0044C4.69917 20.3949 4.066 20.3949 3.67548 20.0044C3.31285 19.6417 3.28695 19.0699 3.59777 18.6774L3.67548 18.5902L8.97878 13.2868Z" fill="rgba(51,51,51,1)"></path></svg>
-                    &nbsp;工具箱</a>
+                <div class="copy">
+                    <img src="icon/GitHub_Invertocat_Logo.svg"><a href="https://github.com/MisakaAI" target="_blank">MisakaAI</a>&nbsp;&copy;&nbsp;{{ year }}
+                </div>
             </div>
         </div>
     </body>
     <script>
+
         const { createApp } = Vue
 
         createApp({
-            // data() {return {}},
-            created() {},
-            methods: {},
+            data() {return {
+                year: new Date().getFullYear(),
+            }},
+            // created() {},
+            methods: {
+                to(e) {
+                    console.log(e)
+                    // 获取id为index的div元素
+                    const cover = document.getElementById('cover')
+                    const main = document.getElementById('main')
+                    const info = document.getElementById('info')
+
+                    // 设置 div 宽度
+                    // 设置 transform 属性为 scale(0.5)
+                    cover.style.width = '0'
+                    main.style.width = '100%'
+                    info.style.transform = 'scale(0.1)'
+
+                    // 在过渡效果完成后跳转到目标页面
+                    setTimeout(() => {
+                        // 跳转到目标页面（这里可以替换为实际的目标URL）
+                        window.location.href = e
+                        cover.style.width = ''
+                        main.style.width = ''
+                        info.style.transform = ''
+                    }, 1000) // 这里的500是过渡时间，单位是毫秒
+                }
+            },
+            mounted() {
+                const cover = document.getElementById('cover')
+                const main = document.getElementById('main')
+                const info = document.getElementById('info')
+
+                cover.style.width = '0'
+                main.style.width = '100%'
+                info.style.transform = 'scale(0.1)'
+
+                setTimeout(() => {
+                    cover.style.width = ''
+                    main.style.width = ''
+                    info.style.transform = ''
+                }, 100)
+            }
         }).mount("#app")
     </script>
 </html>
