add Google Analytics

--- a/favorites/tokusatsu/index.html
+++ b/favorites/tokusatsu/index.html
@@ -50,6 +50,15 @@
         filter: grayscale(0%);
     }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0F3KXZRE7Z');
+    </script>
 </head>
 <body>
     <div id="app">
