--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <script src="js/vue.global.prod.js"></script>
         <link rel="stylesheet" href="css/style.css" />
         <title>勤劳的牧场主 | 阿源的主页</title>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0F3KXZRE7Z');
+        </script>
     </head>
 
     <body>
