--- a/favorites/awesome/book.html
+++ b/favorites/awesome/book.html
@@ -10,6 +10,15 @@
         <style>
             .now { color: #c1272d !important;}
         </style>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-0F3KXZRE7Z');
+        </script>
     </head>
 
     <body>
