--- a/login.html
+++ b/login.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" type="text/css" href="css/login.css">
     <script src="js/vue.global.prod.js"></script>
     <title>登录 | 阿源的主页</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0F3KXZRE7Z');
+    </script>
 </head>
 
 <body>
